--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -10,6 +10,10 @@ body {
     background: var(--background-color);
     color: var(--text-color);
     overflow-x: hidden;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 .navbar {
     position: fixed;
@@ -77,6 +81,10 @@ body {
     transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
     position: relative;
     background: transparent;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 .nav-link::before {
     content: '';
@@ -151,6 +159,10 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 .glitch-text {
     font-family: 'Brotesk', sans-serif;
@@ -162,6 +174,10 @@ body {
     color: transparent;
     width: 100%;
     text-align: left;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 .subtitle {
     font-family: 'Brotesk', sans-serif;
@@ -172,6 +188,10 @@ body {
     display: flex;
     align-items: center;
     gap: 0.2rem;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 .subtitle-text {
     color: rgba(255, 255, 255, 0.6); 
