--- a/src/styles/pages/programming.css
+++ b/src/styles/pages/programming.css
@@ -447,4 +447,37 @@ body::after {
         width: 100%;
         justify-content: center;
     }
+}
+.projects-hero,
+.hero-content,
+.projects-title,
+.projects-subtitle,
+.tech-stack,
+.tech-icon,
+.project-card,
+.project-image,
+.project-badge,
+.project-title,
+.project-description,
+.project-features,
+.feature,
+.projects-intro,
+.projects-description,
+.beta-protection,
+.beta-notice,
+.download-button {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.tech-icon,
+.project-image img,
+img {
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
+    pointer-events: none;
 } 
